edit the search input

--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "cross-env NODE_ENV=production postcss src/style.css -o public/style.css",
     "build:tailwind": "tailwind build -i src/style.css -o public/style.css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.3.6",
+    "cross-env": "^7.0.3",
+    "postcss": "^8.3.8",
+    "postcss-cli": "^9.0.1",
     "tailwindcss": "^2.2.15"
   }
 }
